// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`playlists parse playlist(master-audioChannels.m3u8) 1`] = `
{
  "independentSegments": false,
  "variants": [
    {
      "audio": [
        {
          "channels": "6",
          "groupId": "audio-hi",
          "language": "sp",
          "name": "Espanol Surround",
          "type": "AUDIO",
          "uri": "sp/prog_index1.m3u8",
        },
        {
          "channels": "2",
          "groupId": "audio-hi",
          "language": "sp",
          "name": "Espanol Stereo",
          "type": "AUDIO",
          "uri": "sp/prog_index2.m3u8",
        },
      ],
      "bandwidth": 195023,
      "codecs": "mp4a.40.5",
      "resolution": undefined,
      "subtitles": [],
      "uri": "lo/prog_index.m3u8",
    },
    {
      "audio": [],
      "bandwidth": 195023,
      "codecs": "mp4a.40.5",
      "resolution": undefined,
      "subtitles": [],
      "uri": "lo/prog_index.m3u8",
    },
  ],
}
`;

exports[`playlists parse playlist(media-mediaSequence.m3u8) 1`] = `
{
  "dateRanges": [],
  "discontinuitySequenceBase": undefined,
  "endlist": true,
  "independentSegments": false,
  "mediaSequenceBase": 0,
  "playlistType": "VOD",
  "segments": [
    {
      "discontinuity": undefined,
      "duration": 6.64,
      "map": undefined,
      "programDateTime": undefined,
      "uri": "/test/ts-files/tvy7/8a5e2822668b5370f4eb1438b2564fb7ab12ffe1-hi720.ts",
    },
    {
      "discontinuity": undefined,
      "duration": 6.08,
      "map": undefined,
      "programDateTime": undefined,
      "uri": "/test/ts-files/tvy7/56be1cef869a1c0cc8e38864ad1add17d187f051-hi720.ts",
    },
    {
      "discontinuity": undefined,
      "duration": 6.6,
      "map": undefined,
      "programDateTime": undefined,
      "uri": "/test/ts-files/tvy7/549c8c77f55f049741a06596e5c1e01dacaa46d0-hi720.ts",
    },
    {
      "discontinuity": undefined,
      "duration": 5,
      "map": undefined,
      "programDateTime": undefined,
      "uri": "/test/ts-files/tvy7/6cfa378684ffeb1c455a64dae6c103290a1f53d4-hi720.ts",
    },
  ],
  "targetDuration": 8,
}
`;

exports[`playlists parse playlist(media-fmp4.m3u8) 1`] = `
{
  "dateRanges": [],
  "discontinuitySequenceBase": undefined,
  "endlist": true,
  "independentSegments": true,
  "mediaSequenceBase": 1,
  "playlistType": "VOD",
  "segments": [
    {
      "discontinuity": undefined,
      "duration": 6.006,
      "map": {
        "uri": "main.mp4",
      },
      "programDateTime": undefined,
      "uri": "main.mp4",
    },
    {
      "discontinuity": undefined,
      "duration": 6.006,
      "map": {
        "uri": "main.mp4",
      },
      "programDateTime": undefined,
      "uri": "main.mp4",
    },
  ],
  "targetDuration": 6,
}
`;

exports[`playlists parse playlist(media-simple.m3u8) 1`] = `
{
  "dateRanges": [],
  "discontinuitySequenceBase": undefined,
  "endlist": true,
  "independentSegments": false,
  "mediaSequenceBase": undefined,
  "playlistType": "VOD",
  "segments": [
    {
      "discontinuity": undefined,
      "duration": 10,
      "map": undefined,
      "programDateTime": undefined,
      "uri": "media-00001.ts",
    },
    {
      "discontinuity": undefined,
      "duration": 10,
      "map": undefined,
      "programDateTime": undefined,
      "uri": "media-00002.ts",
    },
    {
      "discontinuity": undefined,
      "duration": 10,
      "map": undefined,
      "programDateTime": undefined,
      "uri": "media-00003.ts",
    },
    {
      "discontinuity": undefined,
      "duration": 10,
      "map": undefined,
      "programDateTime": undefined,
      "uri": "media-00004.ts",
    },
  ],
  "targetDuration": 10,
}
`;

exports[`playlists parse playlist(master-multipleAudioGroups.m3u8) 1`] = `
{
  "independentSegments": false,
  "variants": [
    {
      "audio": [
        {
          "channels": undefined,
          "groupId": "audio-lo",
          "language": "eng",
          "name": "English",
          "type": "AUDIO",
          "uri": "englo/prog_index.m3u8",
        },
        {
          "channels": undefined,
          "groupId": "audio-lo",
          "language": "fre",
          "name": "Français",
          "type": "AUDIO",
          "uri": "frelo/prog_index.m3u8",
        },
        {
          "channels": undefined,
          "groupId": "audio-lo",
          "language": "sp",
          "name": "Espanol",
          "type": "AUDIO",
          "uri": "splo/prog_index.m3u8",
        },
      ],
      "bandwidth": 195023,
      "codecs": "mp4a.40.5",
      "resolution": undefined,
      "subtitles": [],
      "uri": "lo/prog_index.m3u8",
    },
    {
      "audio": [
        {
          "channels": undefined,
          "groupId": "audio-lo",
          "language": "eng",
          "name": "English",
          "type": "AUDIO",
          "uri": "englo/prog_index.m3u8",
        },
        {
          "channels": undefined,
          "groupId": "audio-lo",
          "language": "fre",
          "name": "Français",
          "type": "AUDIO",
          "uri": "frelo/prog_index.m3u8",
        },
        {
          "channels": undefined,
          "groupId": "audio-lo",
          "language": "sp",
          "name": "Espanol",
          "type": "AUDIO",
          "uri": "splo/prog_index.m3u8",
        },
      ],
      "bandwidth": 260000,
      "codecs": "avc1.42e01e,mp4a.40.2",
      "resolution": undefined,
      "subtitles": [],
      "uri": "lo2/prog_index.m3u8",
    },
    {
      "audio": [
        {
          "channels": undefined,
          "groupId": "audio-hi",
          "language": "eng",
          "name": "English",
          "type": "AUDIO",
          "uri": "eng/prog_index.m3u8",
        },
        {
          "channels": undefined,
          "groupId": "audio-hi",
          "language": "fre",
          "name": "Français",
          "type": "AUDIO",
          "uri": "fre/prog_index.m3u8",
        },
        {
          "channels": undefined,
          "groupId": "audio-hi",
          "language": "sp",
          "name": "Espanol",
          "type": "AUDIO",
          "uri": "sp/prog_index.m3u8",
        },
      ],
      "bandwidth": 591680,
      "codecs": "mp4a.40.2, avc1.64001e",
      "resolution": undefined,
      "subtitles": [],
      "uri": "hi/prog_index.m3u8",
    },
    {
      "audio": [
        {
          "channels": undefined,
          "groupId": "audio-hi",
          "language": "eng",
          "name": "English",
          "type": "AUDIO",
          "uri": "eng/prog_index.m3u8",
        },
        {
          "channels": undefined,
          "groupId": "audio-hi",
          "language": "fre",
          "name": "Français",
          "type": "AUDIO",
          "uri": "fre/prog_index.m3u8",
        },
        {
          "channels": undefined,
          "groupId": "audio-hi",
          "language": "sp",
          "name": "Espanol",
          "type": "AUDIO",
          "uri": "sp/prog_index.m3u8",
        },
      ],
      "bandwidth": 650000,
      "codecs": "avc1.42e01e,mp4a.40.2",
      "resolution": undefined,
      "subtitles": [],
      "uri": "hi2/prog_index.m3u8",
    },
  ],
}
`;

exports[`playlists parse playlist(media-interstitials.m3u8) 1`] = `
{
  "dateRanges": [
    {
      "classId": "com.apple.hls.interstitial",
      "clientAttributes": {
        "ASSET-LIST": "http://localhost:52002/session/b41fa084-fad0-47f7-af9e-7f03c2e81edb/asset-list.json?startDate",
        "RESTRICT": "SKIP,JUMP",
        "RESUME-OFFSET": 0,
      },
      "id": "i0",
      "startDate": DateTime {
        "_zone": SystemZone {},
        "c": {
          "day": 7,
          "hour": 17,
          "millisecond": 207,
          "minute": 17,
          "month": 10,
          "second": 0,
          "year": 2024,
        },
        "invalid": null,
        "isLuxonDateTime": true,
        "loc": Locale {
          "eraCache": {},
          "fastNumbersCached": null,
          "intl": "en-US",
          "locale": "en-US",
          "meridiemCache": null,
          "monthsCache": {
            "format": {},
            "standalone": {},
          },
          "numberingSystem": null,
          "outputCalendar": null,
          "specifiedLocale": null,
          "weekSettings": null,
          "weekdaysCache": {
            "format": {},
            "standalone": {},
          },
        },
        "localWeekData": null,
        "o": -0,
        "ts": 1728321420207,
        "weekData": null,
      },
    },
    {
      "classId": "com.apple.hls.interstitial",
      "clientAttributes": {
        "ASSET-LIST": "http://localhost:52002/session/b41fa084-fad0-47f7-af9e-7f03c2e81edb/asset-list.json?startDate",
        "RESTRICT": "SKIP,JUMP",
        "RESUME-OFFSET": 0,
      },
      "id": "i1",
      "startDate": DateTime {
        "_zone": SystemZone {},
        "c": {
          "day": 7,
          "hour": 17,
          "millisecond": 207,
          "minute": 17,
          "month": 10,
          "second": 10,
          "year": 2024,
        },
        "invalid": null,
        "isLuxonDateTime": true,
        "loc": Locale {
          "eraCache": {},
          "fastNumbersCached": null,
          "intl": "en-US",
          "locale": "en-US",
          "meridiemCache": null,
          "monthsCache": {
            "format": {},
            "standalone": {},
          },
          "numberingSystem": null,
          "outputCalendar": null,
          "specifiedLocale": null,
          "weekSettings": null,
          "weekdaysCache": {
            "format": {},
            "standalone": {},
          },
        },
        "localWeekData": null,
        "o": -0,
        "ts": 1728321430207,
        "weekData": null,
      },
    },
  ],
  "discontinuitySequenceBase": undefined,
  "endlist": true,
  "independentSegments": false,
  "mediaSequenceBase": undefined,
  "playlistType": "VOD",
  "segments": [
    {
      "discontinuity": undefined,
      "duration": 4,
      "map": {
        "uri": "init.mp4",
      },
      "programDateTime": undefined,
      "uri": "1.m4s",
    },
    {
      "discontinuity": undefined,
      "duration": 4,
      "map": {
        "uri": "init.mp4",
      },
      "programDateTime": undefined,
      "uri": "2.m4s",
    },
    {
      "discontinuity": undefined,
      "duration": 4,
      "map": {
        "uri": "init.mp4",
      },
      "programDateTime": undefined,
      "uri": "3.m4s",
    },
    {
      "discontinuity": undefined,
      "duration": 4,
      "map": {
        "uri": "init.mp4",
      },
      "programDateTime": undefined,
      "uri": "4.m4s",
    },
    {
      "discontinuity": undefined,
      "duration": 4,
      "map": {
        "uri": "init.mp4",
      },
      "programDateTime": undefined,
      "uri": "5.m4s",
    },
    {
      "discontinuity": undefined,
      "duration": 5.833,
      "map": {
        "uri": "init.mp4",
      },
      "programDateTime": undefined,
      "uri": "6.m4s",
    },
    {
      "discontinuity": undefined,
      "duration": 3.792,
      "map": {
        "uri": "init.mp4",
      },
      "programDateTime": undefined,
      "uri": "7.m4s",
    },
  ],
  "targetDuration": 6,
}
`;

exports[`playlists parse playlist(media-dateTime.m3u8) 1`] = `
{
  "dateRanges": [],
  "discontinuitySequenceBase": undefined,
  "endlist": true,
  "independentSegments": false,
  "mediaSequenceBase": 0,
  "playlistType": "VOD",
  "segments": [
    {
      "discontinuity": undefined,
      "duration": 10,
      "map": undefined,
      "programDateTime": undefined,
      "uri": "hls_450k_video.ts",
    },
    {
      "discontinuity": undefined,
      "duration": 10,
      "map": undefined,
      "programDateTime": DateTime {
        "_zone": SystemZone {},
        "c": {
          "day": 22,
          "hour": 13,
          "millisecond": 166,
          "minute": 20,
          "month": 6,
          "second": 26,
          "year": 2016,
        },
        "invalid": null,
        "isLuxonDateTime": true,
        "loc": Locale {
          "eraCache": {},
          "fastNumbersCached": null,
          "intl": "en-US",
          "locale": "en-US",
          "meridiemCache": null,
          "monthsCache": {
            "format": {},
            "standalone": {},
          },
          "numberingSystem": null,
          "outputCalendar": null,
          "specifiedLocale": null,
          "weekSettings": null,
          "weekdaysCache": {
            "format": {},
            "standalone": {},
          },
        },
        "localWeekData": null,
        "o": -0,
        "ts": 1466601626166,
        "weekData": null,
      },
      "uri": "hls_450k_video.ts",
    },
  ],
  "targetDuration": 10,
}
`;

exports[`playlists parse playlist(master-simple.m3u8) 1`] = `
{
  "independentSegments": false,
  "variants": [
    {
      "audio": [],
      "bandwidth": 240000,
      "codecs": undefined,
      "resolution": {
        "height": 224,
        "width": 396,
      },
      "subtitles": [],
      "uri": "media.m3u8",
    },
    {
      "audio": [],
      "bandwidth": 40000,
      "codecs": undefined,
      "resolution": undefined,
      "subtitles": [],
      "uri": "media1.m3u8",
    },
    {
      "audio": [],
      "bandwidth": 440000,
      "codecs": undefined,
      "resolution": {
        "height": 224,
        "width": 396,
      },
      "subtitles": [],
      "uri": "media2.m3u8",
    },
    {
      "audio": [],
      "bandwidth": 1928000,
      "codecs": undefined,
      "resolution": {
        "height": 540,
        "width": 960,
      },
      "subtitles": [],
      "uri": "media3.m3u8",
    },
  ],
}
`;

exports[`playlists parse playlist(master-fmp4.m3u8) 1`] = `
{
  "independentSegments": true,
  "variants": [
    {
      "audio": [
        {
          "channels": undefined,
          "groupId": "aud1",
          "language": "eng",
          "name": "English",
          "type": "AUDIO",
          "uri": "a1/prog_index.m3u8",
        },
      ],
      "bandwidth": 2215219,
      "codecs": "avc1.640020,mp4a.40.2",
      "resolution": {
        "height": 540,
        "width": 960,
      },
      "subtitles": [
        {
          "channels": undefined,
          "groupId": "sub1",
          "language": "eng",
          "name": "English",
          "type": "SUBTITLES",
          "uri": "s1/eng/prog_index.m3u8",
        },
      ],
      "uri": "v4/prog_index.m3u8",
    },
    {
      "audio": [
        {
          "channels": undefined,
          "groupId": "aud1",
          "language": "eng",
          "name": "English",
          "type": "AUDIO",
          "uri": "a1/prog_index.m3u8",
        },
      ],
      "bandwidth": 7976430,
      "codecs": "avc1.64002a,mp4a.40.2",
      "resolution": {
        "height": 1080,
        "width": 1920,
      },
      "subtitles": [
        {
          "channels": undefined,
          "groupId": "sub1",
          "language": "eng",
          "name": "English",
          "type": "SUBTITLES",
          "uri": "s1/eng/prog_index.m3u8",
        },
      ],
      "uri": "v8/prog_index.m3u8",
    },
    {
      "audio": [
        {
          "channels": undefined,
          "groupId": "aud1",
          "language": "eng",
          "name": "English",
          "type": "AUDIO",
          "uri": "a1/prog_index.m3u8",
        },
      ],
      "bandwidth": 6181885,
      "codecs": "avc1.64002a,mp4a.40.2",
      "resolution": {
        "height": 1080,
        "width": 1920,
      },
      "subtitles": [
        {
          "channels": undefined,
          "groupId": "sub1",
          "language": "eng",
          "name": "English",
          "type": "SUBTITLES",
          "uri": "s1/eng/prog_index.m3u8",
        },
      ],
      "uri": "v7/prog_index.m3u8",
    },
    {
      "audio": [
        {
          "channels": undefined,
          "groupId": "aud1",
          "language": "eng",
          "name": "English",
          "type": "AUDIO",
          "uri": "a1/prog_index.m3u8",
        },
      ],
      "bandwidth": 4682666,
      "codecs": "avc1.64002a,mp4a.40.2",
      "resolution": {
        "height": 1080,
        "width": 1920,
      },
      "subtitles": [
        {
          "channels": undefined,
          "groupId": "sub1",
          "language": "eng",
          "name": "English",
          "type": "SUBTITLES",
          "uri": "s1/eng/prog_index.m3u8",
        },
      ],
      "uri": "v6/prog_index.m3u8",
    },
    {
      "audio": [
        {
          "channels": undefined,
          "groupId": "aud1",
          "language": "eng",
          "name": "English",
          "type": "AUDIO",
          "uri": "a1/prog_index.m3u8",
        },
      ],
      "bandwidth": 3170746,
      "codecs": "avc1.640020,mp4a.40.2",
      "resolution": {
        "height": 720,
        "width": 1280,
      },
      "subtitles": [
        {
          "channels": undefined,
          "groupId": "sub1",
          "language": "eng",
          "name": "English",
          "type": "SUBTITLES",
          "uri": "s1/eng/prog_index.m3u8",
        },
      ],
      "uri": "v5/prog_index.m3u8",
    },
    {
      "audio": [
        {
          "channels": undefined,
          "groupId": "aud1",
          "language": "eng",
          "name": "English",
          "type": "AUDIO",
          "uri": "a1/prog_index.m3u8",
        },
      ],
      "bandwidth": 1276223,
      "codecs": "avc1.64001e,mp4a.40.2",
      "resolution": {
        "height": 432,
        "width": 768,
      },
      "subtitles": [
        {
          "channels": undefined,
          "groupId": "sub1",
          "language": "eng",
          "name": "English",
          "type": "SUBTITLES",
          "uri": "s1/eng/prog_index.m3u8",
        },
      ],
      "uri": "v3/prog_index.m3u8",
    },
    {
      "audio": [
        {
          "channels": undefined,
          "groupId": "aud1",
          "language": "eng",
          "name": "English",
          "type": "AUDIO",
          "uri": "a1/prog_index.m3u8",
        },
      ],
      "bandwidth": 904744,
      "codecs": "avc1.64001e,mp4a.40.2",
      "resolution": {
        "height": 360,
        "width": 640,
      },
      "subtitles": [
        {
          "channels": undefined,
          "groupId": "sub1",
          "language": "eng",
          "name": "English",
          "type": "SUBTITLES",
          "uri": "s1/eng/prog_index.m3u8",
        },
      ],
      "uri": "v2/prog_index.m3u8",
    },
    {
      "audio": [
        {
          "channels": undefined,
          "groupId": "aud1",
          "language": "eng",
          "name": "English",
          "type": "AUDIO",
          "uri": "a1/prog_index.m3u8",
        },
      ],
      "bandwidth": 538201,
      "codecs": "avc1.640015,mp4a.40.2",
      "resolution": {
        "height": 270,
        "width": 480,
      },
      "subtitles": [
        {
          "channels": undefined,
          "groupId": "sub1",
          "language": "eng",
          "name": "English",
          "type": "SUBTITLES",
          "uri": "s1/eng/prog_index.m3u8",
        },
      ],
      "uri": "v1/prog_index.m3u8",
    },
    {
      "audio": [
        {
          "channels": undefined,
          "groupId": "aud2",
          "language": "eng",
          "name": "English",
          "type": "AUDIO",
          "uri": "a2/prog_index.m3u8",
        },
      ],
      "bandwidth": 2440329,
      "codecs": "avc1.640020,ac-3",
      "resolution": {
        "height": 540,
        "width": 960,
      },
      "subtitles": [
        {
          "channels": undefined,
          "groupId": "sub1",
          "language": "eng",
          "name": "English",
          "type": "SUBTITLES",
          "uri": "s1/eng/prog_index.m3u8",
        },
      ],
      "uri": "v4/prog_index.m3u8",
    },
    {
      "audio": [
        {
          "channels": undefined,
          "groupId": "aud2",
          "language": "eng",
          "name": "English",
          "type": "AUDIO",
          "uri": "a2/prog_index.m3u8",
        },
      ],
      "bandwidth": 8201540,
      "codecs": "avc1.64002a,ac-3",
      "resolution": {
        "height": 1080,
        "width": 1920,
      },
      "subtitles": [
        {
          "channels": undefined,
          "groupId": "sub1",
          "language": "eng",
          "name": "English",
          "type": "SUBTITLES",
          "uri": "s1/eng/prog_index.m3u8",
        },
      ],
      "uri": "v8/prog_index.m3u8",
    },
    {
      "audio": [
        {
          "channels": undefined,
          "groupId": "aud2",
          "language": "eng",
          "name": "English",
          "type": "AUDIO",
          "uri": "a2/prog_index.m3u8",
        },
      ],
      "bandwidth": 6406995,
      "codecs": "avc1.64002a,ac-3",
      "resolution": {
        "height": 1080,
        "width": 1920,
      },
      "subtitles": [
        {
          "channels": undefined,
          "groupId": "sub1",
          "language": "eng",
          "name": "English",
          "type": "SUBTITLES",
          "uri": "s1/eng/prog_index.m3u8",
        },
      ],
      "uri": "v7/prog_index.m3u8",
    },
    {
      "audio": [
        {
          "channels": undefined,
          "groupId": "aud2",
          "language": "eng",
          "name": "English",
          "type": "AUDIO",
          "uri": "a2/prog_index.m3u8",
        },
      ],
      "bandwidth": 4907776,
      "codecs": "avc1.64002a,ac-3",
      "resolution": {
        "height": 1080,
        "width": 1920,
      },
      "subtitles": [
        {
          "channels": undefined,
          "groupId": "sub1",
          "language": "eng",
          "name": "English",
          "type": "SUBTITLES",
          "uri": "s1/eng/prog_index.m3u8",
        },
      ],
      "uri": "v6/prog_index.m3u8",
    },
    {
      "audio": [
        {
          "channels": undefined,
          "groupId": "aud2",
          "language": "eng",
          "name": "English",
          "type": "AUDIO",
          "uri": "a2/prog_index.m3u8",
        },
      ],
      "bandwidth": 3395856,
      "codecs": "avc1.640020,ac-3",
      "resolution": {
        "height": 720,
        "width": 1280,
      },
      "subtitles": [
        {
          "channels": undefined,
          "groupId": "sub1",
          "language": "eng",
          "name": "English",
          "type": "SUBTITLES",
          "uri": "s1/eng/prog_index.m3u8",
        },
      ],
      "uri": "v5/prog_index.m3u8",
    },
    {
      "audio": [
        {
          "channels": undefined,
          "groupId": "aud2",
          "language": "eng",
          "name": "English",
          "type": "AUDIO",
          "uri": "a2/prog_index.m3u8",
        },
      ],
      "bandwidth": 1501333,
      "codecs": "avc1.64001e,ac-3",
      "resolution": {
        "height": 432,
        "width": 768,
      },
      "subtitles": [
        {
          "channels": undefined,
          "groupId": "sub1",
          "language": "eng",
          "name": "English",
          "type": "SUBTITLES",
          "uri": "s1/eng/prog_index.m3u8",
        },
      ],
      "uri": "v3/prog_index.m3u8",
    },
    {
      "audio": [
        {
          "channels": undefined,
          "groupId": "aud2",
          "language": "eng",
          "name": "English",
          "type": "AUDIO",
          "uri": "a2/prog_index.m3u8",
        },
      ],
      "bandwidth": 1129854,
      "codecs": "avc1.64001e,ac-3",
      "resolution": {
        "height": 360,
        "width": 640,
      },
      "subtitles": [
        {
          "channels": undefined,
          "groupId": "sub1",
          "language": "eng",
          "name": "English",
          "type": "SUBTITLES",
          "uri": "s1/eng/prog_index.m3u8",
        },
      ],
      "uri": "v2/prog_index.m3u8",
    },
    {
      "audio": [
        {
          "channels": undefined,
          "groupId": "aud2",
          "language": "eng",
          "name": "English",
          "type": "AUDIO",
          "uri": "a2/prog_index.m3u8",
        },
      ],
      "bandwidth": 763311,
      "codecs": "avc1.640015,ac-3",
      "resolution": {
        "height": 270,
        "width": 480,
      },
      "subtitles": [
        {
          "channels": undefined,
          "groupId": "sub1",
          "language": "eng",
          "name": "English",
          "type": "SUBTITLES",
          "uri": "s1/eng/prog_index.m3u8",
        },
      ],
      "uri": "v1/prog_index.m3u8",
    },
    {
      "audio": [
        {
          "channels": undefined,
          "groupId": "aud3",
          "language": "eng",
          "name": "English",
          "type": "AUDIO",
          "uri": "a3/prog_index.m3u8",
        },
      ],
      "bandwidth": 2248329,
      "codecs": "avc1.640020,ec-3",
      "resolution": {
        "height": 540,
        "width": 960,
      },
      "subtitles": [
        {
          "channels": undefined,
          "groupId": "sub1",
          "language": "eng",
          "name": "English",
          "type": "SUBTITLES",
          "uri": "s1/eng/prog_index.m3u8",
        },
      ],
      "uri": "v4/prog_index.m3u8",
    },
    {
      "audio": [
        {
          "channels": undefined,
          "groupId": "aud3",
          "language": "eng",
          "name": "English",
          "type": "AUDIO",
          "uri": "a3/prog_index.m3u8",
        },
      ],
      "bandwidth": 8009540,
      "codecs": "avc1.64002a,ec-3",
      "resolution": {
        "height": 1080,
        "width": 1920,
      },
      "subtitles": [
        {
          "channels": undefined,
          "groupId": "sub1",
          "language": "eng",
          "name": "English",
          "type": "SUBTITLES",
          "uri": "s1/eng/prog_index.m3u8",
        },
      ],
      "uri": "v8/prog_index.m3u8",
    },
    {
      "audio": [
        {
          "channels": undefined,
          "groupId": "aud3",
          "language": "eng",
          "name": "English",
          "type": "AUDIO",
          "uri": "a3/prog_index.m3u8",
        },
      ],
      "bandwidth": 6214995,
      "codecs": "avc1.64002a,ec-3",
      "resolution": {
        "height": 1080,
        "width": 1920,
      },
      "subtitles": [
        {
          "channels": undefined,
          "groupId": "sub1",
          "language": "eng",
          "name": "English",
          "type": "SUBTITLES",
          "uri": "s1/eng/prog_index.m3u8",
        },
      ],
      "uri": "v7/prog_index.m3u8",
    },
    {
      "audio": [
        {
          "channels": undefined,
          "groupId": "aud3",
          "language": "eng",
          "name": "English",
          "type": "AUDIO",
          "uri": "a3/prog_index.m3u8",
        },
      ],
      "bandwidth": 4715776,
      "codecs": "avc1.64002a,ec-3",
      "resolution": {
        "height": 1080,
        "width": 1920,
      },
      "subtitles": [
        {
          "channels": undefined,
          "groupId": "sub1",
          "language": "eng",
          "name": "English",
          "type": "SUBTITLES",
          "uri": "s1/eng/prog_index.m3u8",
        },
      ],
      "uri": "v6/prog_index.m3u8",
    },
    {
      "audio": [
        {
          "channels": undefined,
          "groupId": "aud3",
          "language": "eng",
          "name": "English",
          "type": "AUDIO",
          "uri": "a3/prog_index.m3u8",
        },
      ],
      "bandwidth": 3203856,
      "codecs": "avc1.640020,ec-3",
      "resolution": {
        "height": 720,
        "width": 1280,
      },
      "subtitles": [
        {
          "channels": undefined,
          "groupId": "sub1",
          "language": "eng",
          "name": "English",
          "type": "SUBTITLES",
          "uri": "s1/eng/prog_index.m3u8",
        },
      ],
      "uri": "v5/prog_index.m3u8",
    },
    {
      "audio": [
        {
          "channels": undefined,
          "groupId": "aud3",
          "language": "eng",
          "name": "English",
          "type": "AUDIO",
          "uri": "a3/prog_index.m3u8",
        },
      ],
      "bandwidth": 1309333,
      "codecs": "avc1.64001e,ec-3",
      "resolution": {
        "height": 432,
        "width": 768,
      },
      "subtitles": [
        {
          "channels": undefined,
          "groupId": "sub1",
          "language": "eng",
          "name": "English",
          "type": "SUBTITLES",
          "uri": "s1/eng/prog_index.m3u8",
        },
      ],
      "uri": "v3/prog_index.m3u8",
    },
    {
      "audio": [
        {
          "channels": undefined,
          "groupId": "aud3",
          "language": "eng",
          "name": "English",
          "type": "AUDIO",
          "uri": "a3/prog_index.m3u8",
        },
      ],
      "bandwidth": 937854,
      "codecs": "avc1.64001e,ec-3",
      "resolution": {
        "height": 360,
        "width": 640,
      },
      "subtitles": [
        {
          "channels": undefined,
          "groupId": "sub1",
          "language": "eng",
          "name": "English",
          "type": "SUBTITLES",
          "uri": "s1/eng/prog_index.m3u8",
        },
      ],
      "uri": "v2/prog_index.m3u8",
    },
    {
      "audio": [
        {
          "channels": undefined,
          "groupId": "aud3",
          "language": "eng",
          "name": "English",
          "type": "AUDIO",
          "uri": "a3/prog_index.m3u8",
        },
      ],
      "bandwidth": 571311,
      "codecs": "avc1.640015,ec-3",
      "resolution": {
        "height": 270,
        "width": 480,
      },
      "subtitles": [
        {
          "channels": undefined,
          "groupId": "sub1",
          "language": "eng",
          "name": "English",
          "type": "SUBTITLES",
          "uri": "s1/eng/prog_index.m3u8",
        },
      ],
      "uri": "v1/prog_index.m3u8",
    },
  ],
}
`;

exports[`playlists parse playlist(master-multipleAudioGroupsCombined.m3u8) 1`] = `
{
  "independentSegments": false,
  "variants": [
    {
      "audio": [
        {
          "channels": undefined,
          "groupId": "audio-lo",
          "language": "eng",
          "name": "English",
          "type": "AUDIO",
          "uri": undefined,
        },
        {
          "channels": undefined,
          "groupId": "audio-lo",
          "language": "fre",
          "name": "Français",
          "type": "AUDIO",
          "uri": "frelo/prog_index.m3u8",
        },
        {
          "channels": undefined,
          "groupId": "audio-lo",
          "language": "sp",
          "name": "Espanol",
          "type": "AUDIO",
          "uri": "splo/prog_index.m3u8",
        },
      ],
      "bandwidth": 195023,
      "codecs": "mp4a.40.5",
      "resolution": undefined,
      "subtitles": [],
      "uri": "lo/prog_index.m3u8",
    },
    {
      "audio": [
        {
          "channels": undefined,
          "groupId": "audio-lo",
          "language": "eng",
          "name": "English",
          "type": "AUDIO",
          "uri": undefined,
        },
        {
          "channels": undefined,
          "groupId": "audio-lo",
          "language": "fre",
          "name": "Français",
          "type": "AUDIO",
          "uri": "frelo/prog_index.m3u8",
        },
        {
          "channels": undefined,
          "groupId": "audio-lo",
          "language": "sp",
          "name": "Espanol",
          "type": "AUDIO",
          "uri": "splo/prog_index.m3u8",
        },
      ],
      "bandwidth": 260000,
      "codecs": "avc1.42e01e,mp4a.40.2",
      "resolution": undefined,
      "subtitles": [],
      "uri": "lo2/prog_index.m3u8",
    },
    {
      "audio": [
        {
          "channels": undefined,
          "groupId": "audio-hi",
          "language": "eng",
          "name": "English",
          "type": "AUDIO",
          "uri": "eng/prog_index.m3u8",
        },
        {
          "channels": undefined,
          "groupId": "audio-hi",
          "language": "fre",
          "name": "Français",
          "type": "AUDIO",
          "uri": "fre/prog_index.m3u8",
        },
        {
          "channels": undefined,
          "groupId": "audio-hi",
          "language": "sp",
          "name": "Espanol",
          "type": "AUDIO",
          "uri": "sp/prog_index.m3u8",
        },
      ],
      "bandwidth": 591680,
      "codecs": "mp4a.40.2, avc1.64001e",
      "resolution": undefined,
      "subtitles": [],
      "uri": "hi/prog_index.m3u8",
    },
    {
      "audio": [
        {
          "channels": undefined,
          "groupId": "audio-hi",
          "language": "eng",
          "name": "English",
          "type": "AUDIO",
          "uri": "eng/prog_index.m3u8",
        },
        {
          "channels": undefined,
          "groupId": "audio-hi",
          "language": "fre",
          "name": "Français",
          "type": "AUDIO",
          "uri": "fre/prog_index.m3u8",
        },
        {
          "channels": undefined,
          "groupId": "audio-hi",
          "language": "sp",
          "name": "Espanol",
          "type": "AUDIO",
          "uri": "sp/prog_index.m3u8",
        },
      ],
      "bandwidth": 650000,
      "codecs": "avc1.42e01e,mp4a.40.2",
      "resolution": undefined,
      "subtitles": [],
      "uri": "hi2/prog_index.m3u8",
    },
  ],
}
`;

exports[`playlists stringify playlist(master-fmp4.mjs) 1`] = `
"#EXTM3U
#EXT-X-VERSION:8
#EXT-X-INDEPENDENT-SEGMENTS
#EXT-X-MEDIA:TYPE=AUDIO,GROUP-ID="aud1",NAME="English",LANGUAGE="eng",URI="a1/prog_index.m3u8"
#EXT-X-MEDIA:TYPE=SUBTITLES,GROUP-ID="sub1",NAME="English",LANGUAGE="eng",URI="s1/eng/prog_index.m3u8"
#EXT-X-STREAM-INF:BANDWIDTH=2215219,CODECS="avc1.640020,mp4a.40.2",RESOLUTION=960x540,AUDIO="aud1",SUBTITLES="sub1"
v4/prog_index.m3u8
#EXT-X-STREAM-INF:BANDWIDTH=7976430,CODECS="avc1.64002a,mp4a.40.2",RESOLUTION=1920x1080,AUDIO="aud1",SUBTITLES="sub1"
v8/prog_index.m3u8
#EXT-X-STREAM-INF:BANDWIDTH=6181885,CODECS="avc1.64002a,mp4a.40.2",RESOLUTION=1920x1080,AUDIO="aud1",SUBTITLES="sub1"
v7/prog_index.m3u8
#EXT-X-STREAM-INF:BANDWIDTH=4682666,CODECS="avc1.64002a,mp4a.40.2",RESOLUTION=1920x1080,AUDIO="aud1",SUBTITLES="sub1"
v6/prog_index.m3u8
#EXT-X-STREAM-INF:BANDWIDTH=3170746,CODECS="avc1.640020,mp4a.40.2",RESOLUTION=1280x720,AUDIO="aud1",SUBTITLES="sub1"
v5/prog_index.m3u8
#EXT-X-STREAM-INF:BANDWIDTH=1276223,CODECS="avc1.64001e,mp4a.40.2",RESOLUTION=768x432,AUDIO="aud1",SUBTITLES="sub1"
v3/prog_index.m3u8
#EXT-X-STREAM-INF:BANDWIDTH=904744,CODECS="avc1.64001e,mp4a.40.2",RESOLUTION=640x360,AUDIO="aud1",SUBTITLES="sub1"
v2/prog_index.m3u8
#EXT-X-STREAM-INF:BANDWIDTH=538201,CODECS="avc1.640015,mp4a.40.2",RESOLUTION=480x270,AUDIO="aud1",SUBTITLES="sub1"
v1/prog_index.m3u8
#EXT-X-MEDIA:TYPE=AUDIO,GROUP-ID="aud2",NAME="English",LANGUAGE="eng",URI="a2/prog_index.m3u8"
#EXT-X-STREAM-INF:BANDWIDTH=2440329,CODECS="avc1.640020,ac-3",RESOLUTION=960x540,AUDIO="aud2",SUBTITLES="sub1"
v4/prog_index.m3u8
#EXT-X-STREAM-INF:BANDWIDTH=8201540,CODECS="avc1.64002a,ac-3",RESOLUTION=1920x1080,AUDIO="aud2",SUBTITLES="sub1"
v8/prog_index.m3u8
#EXT-X-STREAM-INF:BANDWIDTH=6406995,CODECS="avc1.64002a,ac-3",RESOLUTION=1920x1080,AUDIO="aud2",SUBTITLES="sub1"
v7/prog_index.m3u8
#EXT-X-STREAM-INF:BANDWIDTH=4907776,CODECS="avc1.64002a,ac-3",RESOLUTION=1920x1080,AUDIO="aud2",SUBTITLES="sub1"
v6/prog_index.m3u8
#EXT-X-STREAM-INF:BANDWIDTH=3395856,CODECS="avc1.640020,ac-3",RESOLUTION=1280x720,AUDIO="aud2",SUBTITLES="sub1"
v5/prog_index.m3u8
#EXT-X-STREAM-INF:BANDWIDTH=1501333,CODECS="avc1.64001e,ac-3",RESOLUTION=768x432,AUDIO="aud2",SUBTITLES="sub1"
v3/prog_index.m3u8
#EXT-X-STREAM-INF:BANDWIDTH=1129854,CODECS="avc1.64001e,ac-3",RESOLUTION=640x360,AUDIO="aud2",SUBTITLES="sub1"
v2/prog_index.m3u8
#EXT-X-STREAM-INF:BANDWIDTH=763311,CODECS="avc1.640015,ac-3",RESOLUTION=480x270,AUDIO="aud2",SUBTITLES="sub1"
v1/prog_index.m3u8
#EXT-X-MEDIA:TYPE=AUDIO,GROUP-ID="aud3",NAME="English",LANGUAGE="eng",URI="a3/prog_index.m3u8"
#EXT-X-STREAM-INF:BANDWIDTH=2248329,CODECS="avc1.640020,ec-3",RESOLUTION=960x540,AUDIO="aud3",SUBTITLES="sub1"
v4/prog_index.m3u8
#EXT-X-STREAM-INF:BANDWIDTH=8009540,CODECS="avc1.64002a,ec-3",RESOLUTION=1920x1080,AUDIO="aud3",SUBTITLES="sub1"
v8/prog_index.m3u8
#EXT-X-STREAM-INF:BANDWIDTH=6214995,CODECS="avc1.64002a,ec-3",RESOLUTION=1920x1080,AUDIO="aud3",SUBTITLES="sub1"
v7/prog_index.m3u8
#EXT-X-STREAM-INF:BANDWIDTH=4715776,CODECS="avc1.64002a,ec-3",RESOLUTION=1920x1080,AUDIO="aud3",SUBTITLES="sub1"
v6/prog_index.m3u8
#EXT-X-STREAM-INF:BANDWIDTH=3203856,CODECS="avc1.640020,ec-3",RESOLUTION=1280x720,AUDIO="aud3",SUBTITLES="sub1"
v5/prog_index.m3u8
#EXT-X-STREAM-INF:BANDWIDTH=1309333,CODECS="avc1.64001e,ec-3",RESOLUTION=768x432,AUDIO="aud3",SUBTITLES="sub1"
v3/prog_index.m3u8
#EXT-X-STREAM-INF:BANDWIDTH=937854,CODECS="avc1.64001e,ec-3",RESOLUTION=640x360,AUDIO="aud3",SUBTITLES="sub1"
v2/prog_index.m3u8
#EXT-X-STREAM-INF:BANDWIDTH=571311,CODECS="avc1.640015,ec-3",RESOLUTION=480x270,AUDIO="aud3",SUBTITLES="sub1"
v1/prog_index.m3u8"
`;

exports[`playlists stringify playlist(master-audioChannels.mjs) 1`] = `
"#EXTM3U
#EXT-X-VERSION:8
#EXT-X-MEDIA:TYPE=AUDIO,GROUP-ID="audio-hi",NAME="Espanol Surround",LANGUAGE="sp",URI="sp/prog_index1.m3u8",CHANNELS="6"
#EXT-X-MEDIA:TYPE=AUDIO,GROUP-ID="audio-hi",NAME="Espanol Stereo",LANGUAGE="sp",URI="sp/prog_index2.m3u8",CHANNELS="2"
#EXT-X-STREAM-INF:BANDWIDTH=195023,CODECS="mp4a.40.5",AUDIO="audio-hi"
lo/prog_index.m3u8
#EXT-X-STREAM-INF:BANDWIDTH=195023,CODECS="mp4a.40.5"
lo/prog_index.m3u8"
`;
